--- a/src/popup.html
+++ b/src/popup.html
@@ -5,14 +5,115 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Extension d'enregistrement</title>
   <style>
-    button { margin: 5px;  padding: 8px 16px; }
+    body {
+      width: 350px;
+      font-family: Arial, sans-serif;
+      padding: 10px;
+    }
+    .recording-controls {
+      display: flex;
+      gap: 5px;
+      margin-bottom: 15px;
+    }
+    button {
+      padding: 8px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .primary {
+      background-color: #4285f4;
+      color: white;
+      border: none;
+    }
+    .secondary {
+      background-color: #f1f1f1;
+      border: 1px solid #ddd;
+    }
+    .danger {
+      background-color: #ea4335;
+      color: white;
+      border: none;
+    }
+    h3 {
+      margin-top: 15px;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 5px;
+    }
+    .saved-recordings {
+      max-height: 200px;
+      overflow-y: auto;
+      border: 1px solid #eee;
+      border-radius: 4px;
+    }
+    .recording-item {
+      padding: 8px;
+      border-bottom: 1px solid #eee;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .recording-item:hover {
+      background-color: #f5f5f5;
+    }
+    .actions {
+      display: flex;
+      gap: 5px;
+    }
+    .actions button {
+      padding: 3px 8px;
+      font-size: 12px;
+    }
+    .recording-name-dialog {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      display: none;
+      z-index: 1000;
+    }
+    .dialog-backdrop {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      z-index: 900;
+    }
   </style>
 </head>
 <body>
+  <h2>Click Recorder</h2>
   
-  <button id="start">Start Recording</button>
-  <button id="stop">Stop Recording</button>
-  <button id="replay">Replay</button>
+  <div class="recording-controls">
+    <button id="start" class="primary">Start Recording</button>
+    <button id="stop" class="secondary">Stop</button>
+    <button id="save" class="secondary" disabled>Save Recording</button>
+  </div>
+  
+  <h3>Saved Recordings</h3>
+  <div id="saved-recordings" class="saved-recordings">
+    <!-- List items will be added dynamically -->
+  </div>
+  
+  <!-- Dialog for naming recordings -->
+  <div class="dialog-backdrop" id="dialog-backdrop"></div>
+  <div class="recording-name-dialog" id="recording-name-dialog">
+    <h4 id="dialog-title">Save Recording</h4>
+    <input type="text" id="recording-name" placeholder="Enter a name for this recording">
+    <input type="hidden" id="recording-id">
+    <div style="margin-top: 10px; text-align: right;">
+      <button id="dialog-cancel" class="secondary">Cancel</button>
+      <button id="dialog-save" class="primary">Save</button>
+    </div>
+  </div>
+  
   <script src="popup.js"></script>
 </body>
 </html>
